Update native-image.properties for new Graal version

--- a/vmx86/mx.vmx86/native-image.properties
+++ b/vmx86/mx.vmx86/native-image.properties
@@ -7,11 +7,12 @@
 
 ImageName = vmx86
 
-Requires = tool:truffle
+Requires = language:nfi
 
 JavaArgs = -Xmx3G
 
 LauncherClass = org.graalvm.vm.x86.launcher.AMD64Launcher
-LauncherClassPath = languages/amd64/core.jar:lib/graalvm/launcher-common.jar:lib/graalvm/vmx86-launcher.jar:lib/truffle/truffle-api.jar
 
-Args = -H:MaxRuntimeCompileMethods=10000 -H:+AddAllCharsets
+Args = -H:MaxRuntimeCompileMethods=10000 \
+       -H:+AddAllCharsets \
+       --initialize-at-build-time=org.graalvm.vm.x86,org.graalvm.vm.util
