--- a/vmx86/mx.vmx86/native-image.properties
+++ b/vmx86/mx.vmx86/native-image.properties
@@ -15,4 +15,6 @@ LauncherClass = org.graalvm.vm.x86.launcher.AMD64Launcher
 
 Args = -H:MaxRuntimeCompileMethods=10000 \
        -H:+AddAllCharsets \
-       --initialize-at-build-time=org.graalvm.vm.x86,org.graalvm.vm.util
+       -H:CLibraryPath=${.}/clibraries \
+       --initialize-at-build-time=org.graalvm.vm.x86,org.graalvm.vm.util,org.graalvm.vm.posix,org.graalvm.vm.memory \
+       --initialize-at-run-time=org.graalvm.vm.x86.ElfLoader,org.graalvm.vm.x86.isa.instruction.Rdrand,org.graalvm.vm.posix.api.linux.Linux,org.graalvm.vm.memory.hardware
